2005-10-05  Simos Xenitellis  <simos74@gmx.net>
	reviewed by: plam & keithp

	* fonts.conf.in:

	Modify config file to use Greek fonts before Asian fonts with
	Greek glyphs.

2005-10-05  Christian Biesinger  <cbiesinger@web.de>
        reviewed by: plam & keithp

        * src/Makefile.am:

        Use libtool -no-undefined flag on all platforms.

2005-10-05  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcCacheHaveBank):

	Implement move-to-front array for banks (perf regression
	reported by Ronny V. Vindenes).

2005-10-04  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcDirCacheValid, FcDirCacheUnlink, 
	                 FcDirCacheHasCurrentArch):
	* fc-cache/fc-cache.c (scanDirs):
	* fontconfig/fontconfig.h:

	Add new API which unlinks directory caches and checks dir caches
	for existence of appropriate sections.  Fix fc-cache to unlink
	stale cache files and save directory caches that lack relevant
	sections.

2005-10-03  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcDirCacheValid):

	Ensure that a directory cache has the appropriate section
	before reporting that it is valid (reported by Matthias Clasen).

2005-09-29  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

        reviewed by: plam
	
	* configure.in:
	* src/Makefile.am:
	* src/fcxml.c:

	Use libxml2 if requested (with --enable-libxml2) or if
	expat is not available.

2005-09-29  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcGlobalCacheSave, FcDirCacheWrite):

	Fix multi-arch cache files: compute the position for the
	block to be added using info from OrigFile, not NewFile.

2005-09-28  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcCacheMachineSignature):

        Cast results of sizeof() to unsigned int to get rid of
        warnings on x86_64 (thanks Matthias Clasen).

2005-09-27  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcGlobalCacheSave, FcCacheCopyOld,
                FcDirCacheWrite):

        Use FcAtomic to rewrite cache files.

2005-09-27  Patrick Lam  <plam@mit.edu>
